# agents-platform

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  migrate_to_pg.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: build-agent-images.yml
agent-images/: build-push.sh
agent-images/claude/: Dockerfile
agent-images/codex/: Dockerfile
agent-images/copilot/: Dockerfile
agent-images/cursor/: Dockerfile
agent-images/gemini/: Dockerfile
agent-images/shared/: aw-connector  aw-connector-redis  aw-warm-relay.py  aw-warm-wrapper
backend/app/: config.py  db.py  main.py  models.py  schemas.py  seed.py  slug_utils.py
backend/app/api/: __init__.py  admin.py  agent_configs.py  agent_flows.py  agent_groups.py  agents.py  api_keys.py  callers.py  consolidation.py  evals.py  flowise.py  gallery.py  github.py  health.py  lessons.py  mcp.py  models.py  openai_compat.py  playground.py  remote_agents.py  retro_scores.py  runs.py  sessions.py  settings.py  skills.py  targets.py  telegram.py  tools.py  tunnels.py  whatsapp.py  workflows.py  ws.py  ws_agent.py
backend/app/core/: agent_loop.py  cancel.py  eval_runner.py  events.py  executor.py  fake_chat_model.py  github_sync.py  hops.py  mcp_client.py  rag.py  redis_streams.py  remote_agents_db.py  retro_scorer.py  security.py  skills.py  voice.py  wakeups.py  warm_pool.py  ws_agent_registry.py
backend/app/core/models/: __init__.py  anthropic_p.py  bedrock_p.py  cli.py  cli_subshell.py  openai_p.py
backend/app/core/orchestrators/: __init__.py
backend/app/core/tools/: code.py  docker_agent.py  langchain_tools.py
backend/tests/: test_gallery_api.py  test_lesson_consolidation.py  test_lesson_evidence_runs.py  test_retro_schema.py  test_retro_scorer.py  test_retro_scores_api.py  test_warm_drain_separation.py  test_warm_pool_fixes.py
cli/: agent_cli.py
client/: build-windows.sh  deploy-linux-update.sh  deploy-update.sh
client/agentfs/: agentfs-watch.sh  agentfs.py
client/linux/: agent.py  agent.py.bak  agent.py.new
client/windows/: go.mod  main.go
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Modal.tsx  ModelBadge.tsx  Page.tsx  Tabs.tsx  TargetBadge.tsx
frontend/src/lib/: api.ts  graphFlow.tsx  permissionDefs.ts  ws.ts
frontend/src/routes/: AgentConfigEdit.tsx  AgentConfigs.tsx  AgentEdit.tsx  AgentFlowEdit.tsx  AgentGroupEdit.tsx  AgentGroups.tsx  Agents.tsx  AgentsFlows.tsx  Dashboard.tsx  Evals.tsx  Lessons.tsx  Mcp.tsx  Models.tsx  Playground.tsx  RemoteAgents.tsx  RunDetail.tsx  Runs.tsx  Sessions.tsx  Settings.tsx  Skills.tsx  TargetDetail.tsx  Targets.tsx  TelegramBots.tsx  WorkflowEdit.tsx  Workflows.tsx
mcp_server/: agent_mcp.py
scripts/: dev.sh  setup.sh  start.sh  test_all.sh  test_mcp.py
tests/e2e/: builtin.spec.ts  crud.spec.ts  edit.spec.ts  gaps.spec.ts  langchain_agent.spec.ts  orchestrations.spec.ts  ui.spec.ts
tests/features/: agents.feature  cli.feature  crud.feature  environment.py  evals.feature  lineage.feature  mcp.feature  mcp_discovery.feature  skills.feature  workflows.feature
tests/features/steps/: api_steps.py
