[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-platform"
version = "0.1.0"
description = "Multi-agent platform: LangGraph orchestration, UI, CLI, MCP server"
requires-python = ">=3.11"
authors = [{ name = "Fred", email = "fred.diaswu@coxautoinc.com" }]
dependencies = [
  # Web
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.12",
  # DB
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  # Settings + schemas
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  # Agents
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langgraph>=0.2.50",
  "langchain-anthropic>=0.2",
  "langchain-openai>=0.2",
  "langchain-aws>=0.2",
  # MCP
  "mcp>=1.0",
  # CLI
  "click>=8.1",
  "rich>=13.9",
  "questionary>=2.0",
  # HTTP
  "httpx>=0.27",
  "anyio>=4.6",
  # Eval support
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
  "behave>=1.2.6",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.13",
]

[project.scripts]
agent = "cli.agent_cli:main"
agent-mcp = "mcp_server.agent_mcp:main"
agent-platform = "backend.app.main:dev_run"

[tool.setuptools]
packages = ["backend", "backend.app", "backend.app.api", "backend.app.core",
            "backend.app.core.models", "backend.app.core.tools", "backend.app.core.orchestrators",
            "cli", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"
